# QtDmSfuClient-widget

./: .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  SfuClient.pro  connect_sfu.ui  controller.cpp  controller.h  dialogconnetsfu.h  dialogconnetsfu.ui  dialogcreateroom.cpp  dialogcreateroom.h  dialogcreateroom.ui  dialoglimit.ui  dialogparticipant.cpp  dialogseek.cpp  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  stable.h
certs/: ca_server.pem  client.key  client.pem
lib/: ChecksumMediaCrypto.cpp  ChecksumMediaCrypto.h  controller.cpp  controller.h  dm_peer_connection.cpp  dm_peer_connection.h  dm_sfu_signaling.cpp  dm_sfu_signaling.h  dm_video_observer.cpp  dm_video_observer.h  frame_widget.cpp  frame_widget.h  qt_sfu_signaling.cpp  qt_sfu_signaling.h
ui/: Info.plist  dialogconnetsfu.cpp  dialogconnetsfu.ui  dialogcreateroom.cpp  dialogcreateroom.ui  dialoglimit.cpp  dialoglimit.h  dialoglimit.ui  dialogparticipant.cpp  dialogparticipant.h  dialogparticipant.ui  dialogseek.cpp  dialogseek.h  dialogseek.ui  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
